[package]
name = "rust-chatgpt"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "^0.14", features = ["full"] }  # A fast and correct http implementation
hyper-tls = "^0.5"  # Provides an https connector for use with hyper
tokio = { version = "^1.0", features = ["full"]}
serde = { version = "^1.0" } #for serialization and deserialization
serde_derive = "^1.0"
serde_json = "^1.0" # for converting to and from json
spinners = "^2.0" # for displying spinners while waiting for result
dotenv = "^0.15.0" # for loading environment variables